Fix main layout padding on mobile

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -34,7 +34,7 @@ section {
   margin: 0 auto;
 }
 
-@media screen and (max-device-width: 600px) {
+@media screen and (max-device-width: 599px) {
   html {
     font-size: 16px;
   }
